Fixed cropped search results in hotels search page

--- a/src/styles/css/components/search-result-component.scss
+++ b/src/styles/css/components/search-result-component.scss
@@ -152,9 +152,9 @@ $media-expressions: (
 	.rating {
 		color: #898c8d;
 		margin-bottom: 10px;
-    display: flex;
+    	display: flex;
 		.rating-holder {
-      margin: 0 7px;
+     		margin: 0 7px;
 		}
 	}
 	p {
@@ -199,7 +199,6 @@ $media-expressions: (
 		@include media(">=desktop") {
 			padding-top: 11px;
       margin-right: 33px;
-      min-width: 367px;
 		}
   }
   // &-description {
